--- a/source/framework/Makefile
+++ b/source/framework/Makefile
@@ -1,6 +1,6 @@
 #obj-y += model/
 #obj-y += time/
-#obj-y += task/
-obj-y += cpu/
+obj-y += task/
+#obj-y += cpu/
 #obj-y += datastruct/
 #obj-y += communication/
